<resources>
    <string name="app_name">DacTaPhanMem</string>
    <string name="title_name">Đặc tả phần mềm</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="user_name_title">Tên tài khoản</string>
    <string name="password_title">Mật khẩu</string>
    <string name="confirm_password_title">Xác thực mật khẩu</string>
    <string name="phone_number_title">Số điện thoại</string>
    <string name="grade_title">Khoa</string>
    <string name="sign_up_title_vi">Đăng ký</string>
    <string name="title_have_account">Đã có tài khoản Đăng nhập</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_vi_title">Đăng nhập</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_name">Tên sách: %s</string>
    <string name="book_author">Tên tác giả: %s</string>
    <string name="book_year">Năm sản xuất: %s</string>
    <string name="book_count">Số lượng: %s</string>
    <string name="name_info_title">Tên tài khoản:</string>
    <string name="phone_info_title">Số điện thoại:</string>
    <string name="grade_info">Khoa:</string>
    <string name="account_type_info">Loại tài khoản:</string>
    <string name="book_borrow_title">Sách đã mượn</string>
    <string name="history_title">Lịch sử mượn trả</string>
    <string name="violate_title">Danh sách vi phạm</string>
    <string name="logout_title">Đăng xuất</string>
    <string name="account_student">Sinh viên</string>
    <string name="account_librarian">Thủ thư</string>
    <string name="book_info_title">Thông tin sách</string>
    <string name="count_borrow_title">Số lượng:</string>
    <string name="count_default">0</string>
    <string name="cancel_title">Hủy</string>
    <string name="borrow_title_vi">Mượn</string>
    <string name="violate_title_vi">Danh sách vi phạm</string>
    <string name="violate_overtime">Quá thời gian: %s</string>
    <string name="warning_title">Nhắc nhở</string>
    <string name="warning_content">Bạn đang có danh sách vi phạm\nĐể mượn sách bạn cần xử lý các vi phạm trước!!</string>
    <string name="action_confirm_title">Thực hiện</string>
    <string name="data_empty">Không có dữ liệu</string>
    <string name="borrow_book_title">Sách đã mượn</string>
    <string name="borrow_time">Ngày trả: %s</string>
    <string name="give_back">Trả</string>
    <string name="history_name">Tên sinh viên: %s</string>
    <string name="history_phone_number">Số điện thoại: %s</string>
    <string name="history_book_name">Tên sách: %s</string>
    <string name="history_book_count">Số lượng sách: %s</string>
    <string name="history_state">Trạng thái: %s</string>
    <string name="history_date">Ngày: %s</string>
    <string name="more">More</string>
    <string name="more_content">Chỉnh sửa thông tin sách hoặc xóa sách trong\nthư viện</string>
    <string name="update">Chỉnh sửa</string>
    <string name="delete">Xóa</string>
    <string name="update_book">Chỉnh sửa thông tin sách</string>
    <string name="book_name_info">Tên sách…</string>
    <string name="book_author_info">Tên tác giả…</string>
    <string name="book_year_info">Năm sản xuất…</string>
    <string name="book_count_info">Số lượng…</string>
    <string name="add_book_title">Thêm sách</string>

</resources>
