<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/black_overlay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/shape_bg_white_corner_8">

        <TextView
            android:id="@+id/tvWarningTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fbase_font_bold"
            android:text="@string/warning_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWanrinContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/fbase_font_regular"
            android:textColor="@color/neutral_2"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWarningTitle"
            android:text="@string/warning_content" />

        <View
            android:id="@+id/vBorrowDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWanrinContent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vBorrowDivider">

            <TextView
                android:id="@+id/tvWarningCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ellipsize="end"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:fontFamily="@font/fbase_font_regular"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/cancel_title"
                android:textColor="@color/neutral_2"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tvWarning"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/fbase_font_regular"
                android:gravity="center"
                android:maxLines="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:text="@string/action_confirm_title"
                android:textColor="@color/neutral_2"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
